<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/idStringNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeIdStringNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/widhtImagen"
        android:layout_height="@dimen/heightImagen"
        app:layout_constraintBottom_toTopOf="@+id/idStringCreado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idStringNombre"
        app:layout_constraintVertical_bias="0.531"
        app:srcCompat="@drawable/info_mio" />

    <TextView
        android:id="@+id/idStringCreado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creado"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeCreadoPor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/idStringRudyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rudyn Guerrero Ferrer"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeMiNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/idStringContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactar"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeContacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/idStringContactoCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="@dimen/textSizeContacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <TextView
        android:id="@+id/idStringVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeVersion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986" />

</android.support.constraint.ConstraintLayout>