<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:keepScreenOn="true"
    tools:context="com.example.rudyn.anotar_domino.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/idNombreApk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopAnotarD"
            android:gravity="top|center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSizeAnotarD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idNombreApk"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/idBtnIniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_inicio"
                android:onClick="empezar"
                android:paddingBottom="@dimen/paddingBottTopBotonesInic"
                android:paddingEnd="@dimen/paddingEndStartBotonesInic"
                android:paddingStart="@dimen/paddingEndStartBotonesInic"
                android:paddingTop="@dimen/paddingBottTopBotonesInic"
                android:text="@string/empezar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSizeBotonesInicio"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.473"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <Button
                android:id="@+id/idBtnPartidasGuardadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_inicio"
                android:onClick="partidasGuardadas"
                android:paddingBottom="@dimen/paddingBottTopBotonesInic"
                android:paddingEnd="@dimen/paddingEndStartBotonesInic"
                android:paddingStart="@dimen/paddingEndStartBotonesInic"
                android:paddingTop="@dimen/paddingBottTopBotonesInic"
                android:text="@string/partidasGuardadas"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSizeBotonesInicio"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.681" />

            <Button
                android:id="@+id/idBtnOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_inicio"
                android:onClick="opciones"
                android:paddingBottom="@dimen/paddingBottTopBotonesInic"
                android:paddingEnd="@dimen/paddingEndStartBotonesInic"
                android:paddingStart="@dimen/paddingEndStartBotonesInic"
                android:paddingTop="@dimen/paddingBottTopBotonesInic"
                android:text="@string/opciones"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSizeBotonesInicio"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.842"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <Button
                android:id="@+id/idBtnInformacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_inicio"
                android:onClick="info"
                android:paddingBottom="@dimen/paddingBottTopBotonesInic"
                android:paddingEnd="@dimen/paddingEndStartBotonesInic"
                android:paddingStart="@dimen/paddingEndStartBotonesInic"
                android:paddingTop="@dimen/paddingBottTopBotonesInic"
                android:text="@string/info"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSizeBotonesInicio"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.972"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
