<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libreta_verde1"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/cantidad_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/cant_puntos"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeCantidadPuntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/idAnotarCantPuntos"
        android:layout_width="@dimen/widhtIdAnotarCantidadDePuntos"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="center"
        android:hint="100"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeIdAnotarCantidadDePuntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />


    <TextView
        android:id="@+id/idTextViewJugarCpases"
        android:layout_width="@dimen/widhtIdTextViewJugarConPase"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:gravity="center_vertical"
        android:text="@string/selectJugarCpases"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeIdTextViewJugarConPase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <CheckBox
        android:id="@+id/idCheckBoxPases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:button="@drawable/boton_checkbox"
        android:ellipsize="none"
        android:onClick="visibilidadJugarConPases"
        android:outlineProvider="none"
        android:pointerIcon="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <EditText
        android:id="@+id/editTextPase1"
        android:layout_width="@dimen/widhtEditTextPase"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="10"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeEditTextPase"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <EditText
        android:id="@+id/editTextPase2"
        android:layout_width="@dimen/widhtEditTextPase"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:hint="20"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeEditTextPase"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/idBtnAplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/accept"
        android:onClick="añadirPasesPtosFinalesCantidad"
        android:text="@string/aplicar"
        android:textSize="@dimen/textSizeBtonAplicarCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986" />

    <Button
        android:id="@+id/idBtnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginLeft="@dimen/margen"
        android:layout_marginRight="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/cancel"
        android:onClick="onBackPressed"
        android:text="@string/cancelar"
        android:textSize="@dimen/textSizeBtonAplicarCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

</android.support.constraint.ConstraintLayout>